Use jQuery to upload image instead of curl
Base64 encode the image before AJAX POST'ing it to imgur. Grabs the url
from the response and echos this to pbcopy. Closes #2.

--- a/Imgur Upload.wdgt/imageupload.html
+++ b/Imgur Upload.wdgt/imageupload.html
@@ -3,6 +3,7 @@
 		<style type="text/css">
 			@import "imageupload.css";
 		</style>
+        <script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
 		<script src="imageupload.js" type="text/javascript"></script>
 		<script src="effects/prototype.js" type="text/javascript"></script>
 		<script src="effects/scriptaculous.js" type="text/javascript"></script>
